🔧 Fix carousel design issue on mobile

--- a/frontend/src/components/design-system/atoms/carousel/Carousel.module.scss
+++ b/frontend/src/components/design-system/atoms/carousel/Carousel.module.scss
@@ -3,4 +3,11 @@
     line-height: 30px;
     font-size: 16px;
     overflow-y: hidden;
+
+    & > span,
+    & > span > * {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
 }
